	(AC_MINGW32): Likewise.
	(AC_EMXOS2): Likewise.

	* acspecific.m4 (AC_EMXOS2): New macro. Contributed by Ryuji Abe
	<raeva@t3.rim.or.jp>.
	(AC_EXEEXT): Handle case for OS/2.
	(AC_PROG_CC_WORKS): Show $CPPFLAGS when running the compiler.
	(AC_PROG_CXX_WORKS): Likewise.

	* autoconf.texi (AC_EMXOS2): Document.
	(AC_EXEEXT): Mention OS/2.
	(AC_MINGW32): Move.
	(UPDATED): Update.

1999-04-01  Ben Elliston  <bje@cygnus.com>

	* standards.texi: Update from FSF.

	* acspecific.m4 (AC_PROG_INSTALL): Avoid using the installation
	script belonging to HP `pwplus' when running the install
	program. Contributed by Steven G. Johnson <stevenj@alum.mit.edu>
	and Dave Adams <adams@hpesdwa.fc.hp.com>.
	(AC_EXEEXT): Do not consider `.xcoff' as a possible executable
	filename extension. Contributed by Robert S. Maier
	<rsm@math.arizona.edu>.

1999-03-28  Tom Tromey  <tromey@cygnus.com>

	* autoconf.texi (AC_OUTPUT_COMMANDS): Add to macro index.

1999-03-22  Ben Elliston  <bje@cygnus.com>

	* config.guess: Rename BUILD_CC to CC_FOR_BUILD; there is a
	precedent for the usual name of this environment variable.

1999-03-22  Pavel Roskin  <pavel_roskin@geocities.com>

	* autoheader.sh: Report an error if AC_CONFIG_HEADER is not
	present in the configure input file.

1999-03-21  Ben Elliston  <bje@cygnus.com>

	* config.guess: Correct typo for detecting ELF on FreeBSD.

1998-03-14  Alexandre Oliva  <oliva@dcc.unicamp.br>
	
	* config.guess: Recognise HP 9000/8x0 machines.

1999-03-11  Ben Elliston  <bje@cygnus.com>

	* config.sub: Recognise hppa2.0w. Contributed by Erez Zadok
	<ezk@cs.columbia.edu>.

1999-03-11  Pavel Roskin  <pavel_roskin@geocities.com>

	* config.guess: Prefer $HOST_CC over $CC when deciding on a C
	compiler to compile stub programs. Allow this to be overridden
	with the value of $BUILD_CC in cross-compilation environments
	where the native compiler must be used for running tests on the
	host.
		
1999-03-11  Ben Elliston  <bje@cygnus.com>
